--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -563,7 +563,7 @@ deployments:
   - name: socket-server
     customImage: docker-registry.metechvn.com/uat/omicx-v2/socket_server
     pullPolicy: IfNotPresent
-    tag: "29cc7e51"
+    tag: 'd472f7f5'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
