--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -718,7 +718,7 @@ deployments:
   - name: frontend-v2
     customImage: docker-registry.metechvn.com/uat/omicx-v2/frontend-v2
     pullPolicy: Always
-    tag: "d38085e1"
+    tag: '15a337dd'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
