Updates file values.yaml with 54e119cf in deployment: acd-backend

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -895,7 +895,7 @@ deployments:
   - name: acd-backend
     customImage: docker-registry.metechvn.com/uat/omicx-v2/acd-backend
     pullPolicy: Always
-    tag: "75da7698"
+    tag: '54e119cf'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
