--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1492,7 +1492,7 @@ deployments:
   - name: acd-workflow
     customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-workflow
     pullPolicy: Always
-    tag: "cbb4a6ff"
+    tag: '718dd17a'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
@@ -1591,8 +1591,8 @@ autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
-  targetCPUUtilizationPercentag: "cbb4a6ff"
-  # targetMemoryUtilizationPercentag: 'cbb4a6ff'
+  targetCPUUtilizationPercentag: '718dd17a'
+  # targetMemoryUtilizationPercentag: '718dd17a'
 
 nodeSelector: {}
 
