--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -160,6 +160,11 @@ server                  {
                 proxy_pass              http://omicx-ai-connector-8080-service.omicx-v2-dev.svc.cluster.local:8080/webhook/receive;
        }
 
+       location /integration {
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-acd-workflow-8080-service.omicx-v2-dev.svc.cluster.local:8080/api/v1/integration;
+       }
+
        location /workflow {
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-acd-workflow-8080-service.omicx-v2-dev.svc.cluster.local:8080/api/v1/workflows;
